Modify not to unpack jar